<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".AddSubjectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_course"
            android:textColor="#ffffff"
            android:textSize="@dimen/_30ssp" />

        <ImageView
            android:id="@+id/back_aroww"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_5sdp"
            android:onClick="goHome"
            android:src="@drawable/abc_vector_test"
            android:contentDescription="@string/discription"
            android:tint="#ffffff"
            tools:ignore="PrivateResource" />
    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autofillHints="@string/course_name"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="text"
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_name"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_code_text_input_layout"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autofillHints="@string/code"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:id="@+id/ed_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/code"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/drname_text_input_layout"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autofillHints="@string/doctor_id"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:id="@+id/ed_drname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/doctor_id"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"

        android:background="@drawable/bu2"
        android:onClick="addCourse"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/add"
        android:textSize="22sp" />
</LinearLayout>

</ScrollView>