<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dr_fname_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp">

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/dr_fname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frist_name"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dr_lname_text_input_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"

        android:layout_height="wrap_content">

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/dr_lname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dr_id_text_input_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/dr_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/universtie_id"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dr_username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/dr_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint=" email@mans.edu.eg"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="textEmailAddress"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dr_password_text_input_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dr_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dr_confirm_password_text_input_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dr_confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/dr_singup"
        android:textColor="@android:color/white"
        android:background="@drawable/bu2"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="25sp" />

</LinearLayout>
</ScrollView>