<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pendingActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/back_aroww"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/discription"
            android:onClick="goHome"
            android:src="@drawable/abc_vector_test"
            android:tint="#ffffff"
            tools:ignore="PrivateResource" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:outlineAmbientShadowColor="@color/colorAccent"
        android:splitMotionEvents="true"
        app:counterEnabled="true"
        app:counterMaxLength="5"

        app:hintAnimationEnabled="false"
        tools:targetApi="p">

        <EditText
            android:id="@+id/random"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="30sp"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="reSend"
        android:text="@string/resend_code"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>