<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"

    tools:context=".StudentHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:contentDescription="@string/discription"
                android:src="@drawable/aaaaa" />
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="14dp"
            android:rowCount="2">

            <!--Row 1-->
            <!--Col 1-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="14dp"
                android:onClick="stAccount"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="107dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/Image3"
                        android:layout_width="142dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:src="@drawable/student"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:id="@+id/tvid3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/my_account"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!--Col 2-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="14dp"
                android:onClick="getAttend"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="107dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/Image4"
                        android:layout_width="wrap_content"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/notes"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tvid4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/view_attendance"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!--Row 2-->
            <!--Col 1-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="14dp"
                android:onClick="message"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/Image6"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:src="@drawable/messagesico"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:id="@+id/tvid6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/send_apologize"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="14dp"
                android:onClick="signOut"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/Image5"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_input_black_24dp"
                        tools:ignore="ContentDescription" />


                    <TextView
                        android:id="@+id/tvid5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_out"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!--Col 2-->


            <!--Row 3-->
            <!--Col 1-->


        </GridLayout>
</LinearLayout>
</ScrollView>